apply from: 'dependencies.gradle'

apply plugin: 'java'

sourceCompatibility=21

repositories {
    mavenCentral()
}

configurations.all {
    // Check for updates every build
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

test {
    // set heap size for the test JVM(s)
    minHeapSize = "1024m"
    maxHeapSize = "2048m"

    useJUnitPlatform()
}

dependencies {
    implementation          commonDependencies.apache_commons_text
    implementation          commonDependencies.apache_commons_math3
    implementation          commonDependencies.jackson_core
    implementation          commonDependencies.matheclipse_core
    
	compileOnly             commonDependencies.lombok
	annotationProcessor     commonDependencies.lombok
	
    //Tests
	testCompileOnly         commonDependencies.lombok
	testAnnotationProcessor commonDependencies.lombok

    testImplementation      platform(commonDependencies.junit_bom)
    testImplementation      commonDependencies.junit_api
    testRuntimeOnly         commonDependencies.junit_engine

    testImplementation      platform(commonDependencies.mockito_bom)
    testImplementation      commonDependencies.mockito

}